# fox-lamp-demo

./: .gitignore  Cargo.toml  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
frontend/: next.config.js  pnpm-lock.yaml
frontend/src/: context.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx  socket.tsx
frontend/src/components/: Debug.tsx  Led.tsx  LedMatrix.tsx
src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
