[package]
name = "fox-lamp"
version = "0.1.0"
authors = ["RoyalFoxy <sepp.toni.mo@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std", "hal", "esp-idf-sys/native"]
pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc/nightly"]
experimental = ["embedded-svc?/experimental", "esp-idf-svc/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc/embassy-time-driver", "esp-idf-svc/embassy-time-isr-queue"]

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-svc = { version = "0.46.2" }
embedded-svc = { version = "0.25", optional = true, default-features = false }
smart-leds = "0.3.0"
ws2812-esp32-rmt-driver = "0.6.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
anyhow = "1.0.75"
futures = "0.3.28"
serde = "1.0"
serde_json = "1.0.106"
rgb = { version = "0.8.36", features = ["serde"] }
types = { path = "./types" }
serde-big-array = "0.5.1"

[build-dependencies]
embuild = "0.31.2"
anyhow = "1.0.75"
types = { path = "./types" }
ts-rs = "7.0.0"
